--- a/src/main/resources/com/example/watertall/settings.fxml
+++ b/src/main/resources/com/example/watertall/settings.fxml
@@ -6,32 +6,34 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.watertall.Controller">
+<AnchorPane prefHeight="400.0" prefWidth="700.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.watertall.Controller">
    <children>
       <BorderPane layoutX="68.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
-            <AnchorPane prefHeight="65.0" prefWidth="200.0" style="-fx-background-color: WHITE;" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="65.0" prefWidth="200.0" style="-fx-background-color: #808000;" BorderPane.alignment="CENTER">
                <children>
-                  <Pane layoutX="68.0" layoutY="20.0" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: #808000;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <Label fx:id="locationLabel" layoutX="50" layoutY="200" text="Location: " />
+                  <HBox layoutX="150.0" layoutY="10.0" spacing="15.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0">
                      <children>
-                        <ImageView fx:id="Exit" fitHeight="22.0" fitWidth="22.0" layoutX="678.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="Exit" fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../../images/exit.png" />
                            </image>
                         </ImageView>
-                     </children></Pane>
-                  <HBox layoutX="68.0" layoutY="-11.0" prefHeight="43.0" prefWidth="525.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0" />
-                  <Label fx:id="Menu" layoutX="14.0" layoutY="34.0" text="MENU" textFill="#b7b7b7">
+                     </children>
+                  </HBox>
+                  <!-- Menu Label with fx:id -->
+                  <Label fx:id="Menu" layoutX="14.0" layoutY="34.0" text="MENU" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../images/menu1.png" />
+                              <Image url="@../../../images/menu.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -39,11 +41,12 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="MenuClose" layoutX="14.0" layoutY="34.0" text="MENU" textFill="#b7b7b7">
+                  <!-- MenuClose Label with fx:id -->
+                  <Label fx:id="MenuClose" layoutX="14.0" layoutY="34.0" text="MENU" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../images/menu1.png" />
+                              <Image url="@../../../images/menu.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -55,11 +58,11 @@
             </AnchorPane>
          </top>
          <left>
-            <AnchorPane fx:id="slider" prefHeight="362.0" prefWidth="176.0" style="-fx-background-color: #808000;" BorderPane.alignment="CENTER">
+            <AnchorPane fx:id="slider" prefWidth="150.0" style="-fx-background-color: #808000;" BorderPane.alignment="CENTER">
                <children>
                   <VBox layoutX="111.0" layoutY="95.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="53.0">
                      <children>
-                        <JFXButton alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="335.0" text="Home" textFill="WHITE">
+                        <JFXButton alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="335.0" styleClass="sidebarItem" text="Home" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
@@ -67,10 +70,11 @@
                               <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../../images/dash.png" />
-                                 </image></ImageView>
+                                 </image>
+                              </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton alignment="BASELINE_LEFT" prefHeight="50.0" text="Get Location" onAction="#getLocation" textFill="WHITE">
+                        <JFXButton alignment="BASELINE_LEFT" onAction="#getLocation" prefHeight="50.0" styleClass="sidebarItem" text="Get Location" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
@@ -78,10 +82,11 @@
                               <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../../images/dash.png" />
-                                 </image></ImageView>
+                                 </image>
+                              </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="335.0" text="Profiles" textFill="WHITE">
+                        <JFXButton alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="335.0" styleClass="sidebarItem" text="Profiles" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
@@ -89,10 +94,11 @@
                               <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../../images/add.png" />
-                                 </image></ImageView>
+                                 </image>
+                              </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="335.0" text="Settings" textFill="WHITE">
+                        <JFXButton alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="335.0" styleClass="sidebarItem" text="Settings" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
@@ -109,6 +115,47 @@
                </children>
             </AnchorPane>
          </left>
+         <center>
+            <!-- GridPane for 2x2 blocks with responsive layout -->
+            <GridPane alignment="CENTER" hgap="20.0" vgap="20.0" BorderPane.alignment="CENTER">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="ALWAYS" />
+                  <ColumnConstraints hgrow="ALWAYS" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints vgrow="ALWAYS" />
+                  <RowConstraints vgrow="ALWAYS" />
+               </rowConstraints>
+
+                           <!-- Block 1 -->
+               <AnchorPane minHeight="100.0" minWidth="150.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                  <children>
+                     <Label fx:id="temperatureLabel" alignment="CENTER" />
+                  </children>
+               </AnchorPane>
+
+                           <!-- Block 2 -->
+               <AnchorPane minHeight="100.0" minWidth="150.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                  <children>
+                     <Label fx:id="moistureLabel" alignment="CENTER" />
+                  </children>
+               </AnchorPane>
+
+                           <!-- Block 3 -->
+               <AnchorPane minHeight="100.0" minWidth="150.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                  <children>
+                     <Label alignment="CENTER" text="Info 3" />
+                  </children>
+               </AnchorPane>
+
+                           <!-- Block 4 -->
+               <AnchorPane minHeight="100.0" minWidth="150.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <children>
+                     <Label alignment="CENTER" text="Info 4" />
+                  </children>
+               </AnchorPane>
+            </GridPane>
+         </center>
       </BorderPane>
    </children>
 </AnchorPane>
