--- a/src/main/resources/com/example/watertall/homepage.fxml
+++ b/src/main/resources/com/example/watertall/homepage.fxml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.watertall.Controller">
+<AnchorPane prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.watertall.Controller">
    <children>
       <BorderPane layoutX="68.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -54,7 +60,7 @@
                <children>
                   <VBox layoutX="111.0" layoutY="95.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="53.0">
                      <children>
-                        <JFXButton alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="335.0" styleClass="sidebarItem" text="Home" textFill="WHITE">
+                        <JFXButton onAction="#homeRedirect" alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="335.0" styleClass="sidebarItem" text="Home" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
@@ -66,19 +72,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton alignment="BASELINE_LEFT" onAction="#getLocation" prefHeight="50.0" styleClass="sidebarItem" text="Get Location" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="15.0" />
-                           </font>
-                           <graphic>
-                              <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../../images/dash.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </JFXButton>
-                        <JFXButton alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="335.0" styleClass="sidebarItem" text="Profiles" textFill="WHITE">
+                        <JFXButton onAction="#profielRedirect" alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="335.0" styleClass="sidebarItem" text="Profiles" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
@@ -90,7 +84,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="335.0" styleClass="sidebarItem" text="Settings" textFill="WHITE">
+                        <JFXButton onAction="#settingRedirect" alignment="BASELINE_LEFT" prefHeight="50.0" prefWidth="335.0" styleClass="sidebarItem" text="Settings" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="15.0" />
                            </font>
