--- a/src/main/resources/com/example/watertall/profiel.fxml
+++ b/src/main/resources/com/example/watertall/profiel.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -144,6 +145,14 @@
                                                 <Insets left="50.0" top="10.0" />
                                             </VBox.margin>
                                         </ComboBox>
+                              <JFXButton fx:id="saveProfile" alignment="CENTER" buttonType="RAISED" onAction="#handleSaveProfile" prefWidth="150.0" ripplerFill="BLACK" style="-fx-background-color: #808000;" text="Opslaan" textFill="WHITE">
+                                 <VBox.margin>
+                                    <Insets left="50.0" top="10.0" />
+                                 </VBox.margin>
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
+                              </JFXButton>
                                     </children></VBox>
                                 <VBox layoutX="263.0" layoutY="43.0" prefHeight="292.0" prefWidth="305.0">
                                     <children>
