--- a/src/main/resources/com/example/watertall/profiel.fxml
+++ b/src/main/resources/com/example/watertall/profiel.fxml
@@ -9,14 +9,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.watertall.ProfielenController">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.watertall.ProfielenController">
     <children>
         <BorderPane layoutX="68.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -104,23 +101,10 @@
                     </children>
                 </AnchorPane>
             </left>
-            <center>
-
-                <GridPane alignment="CENTER" hgap="20.0" vgap="20.0" BorderPane.alignment="CENTER">
-                    <columnConstraints>
-                        <ColumnConstraints hgrow="ALWAYS" />
-                        <ColumnConstraints hgrow="ALWAYS" />
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints vgrow="ALWAYS" />
-                        <RowConstraints vgrow="ALWAYS" />
-                    </rowConstraints>
-                </GridPane>
-            </center>
          <right>
-                <AnchorPane prefHeight="335.0" prefWidth="170.0" BorderPane.alignment="CENTER">
+                <AnchorPane prefHeight="635.0" prefWidth="849.0" BorderPane.alignment="CENTER">
                     <children>
-                        <AnchorPane prefHeight="335.0" prefWidth="197.0">
+                        <AnchorPane layoutX="140.0" layoutY="49.0" prefHeight="335.0" prefWidth="197.0">
                             <children>
                                 <VBox prefHeight="43.0" prefWidth="524.0">
                                     <children>
