--- a/src/main/resources/com/example/watertall/homepage.fxml
+++ b/src/main/resources/com/example/watertall/homepage.fxml
@@ -1,22 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.watertall.Controller">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.watertall.Controller">
    <children>
       <BorderPane layoutX="68.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -105,36 +96,56 @@
             </AnchorPane>
          </left>
          <center>
-            <GridPane alignment="CENTER" gridLinesVisible="true" hgap="20.0" vgap="20.0" BorderPane.alignment="CENTER">
+            <GridPane alignment="CENTER" hgap="20.0" style="-fx-background-color: #dedcdc;" vgap="20.0" BorderPane.alignment="CENTER">
                <columnConstraints>
-                  <ColumnConstraints hgrow="ALWAYS" />
-                  <ColumnConstraints hgrow="ALWAYS" />
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="409.0" minWidth="273.9999694824219" prefWidth="378.0" />
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="556.0000305175781" minWidth="421.0" prefWidth="452.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints vgrow="ALWAYS" />
                   <RowConstraints vgrow="ALWAYS" />
                </rowConstraints>
-               <AnchorPane minHeight="100.0" minWidth="150.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <AnchorPane minHeight="100.0" minWidth="150.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="0" GridPane.rowIndex="0" styleClass="border" >
                   <children>
-                     <Label fx:id="temperatureLabel" alignment="CENTER" />
+                     <VBox alignment="CENTER" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Label fx:id="temperatureLabel" style="-fx-font-weight: bold;" text="Loading...">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="dateLabel" alignment="CENTER_RIGHT" style="-fx-font-weight: bold;" text="Loading...">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                     </VBox>
                   </children>
                </AnchorPane>
-               <AnchorPane minHeight="100.0" minWidth="150.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="1" GridPane.rowIndex="0">
+               <AnchorPane minHeight="100.0" minWidth="150.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="1" GridPane.rowIndex="0" styleClass="border">
                   <children>
-                     <Label fx:id="moistureLabel" alignment="CENTER" />
+                     <Label fx:id="moistureLabel" alignment="CENTER_RIGHT" style="-fx-font-weight: bold;" />
                   </children>
                </AnchorPane>
-               <AnchorPane minHeight="100.0" minWidth="139.0" prefHeight="114.0" prefWidth="139.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <AnchorPane minHeight="100.0" minWidth="139.0" prefHeight="114.0" prefWidth="449.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="1" GridPane.rowIndex="1" styleClass="border">
                   <children>
                      <Label fx:id="temperatureLabel11" alignment="CENTER" />
-                     <BarChart layoutX="60.0" layoutY="60.0" prefHeight="194.0" prefWidth="295.0">
-                       <xAxis>
-                         <CategoryAxis side="BOTTOM" />
-                       </xAxis>
-                       <yAxis>
-                         <NumberAxis side="LEFT" />
-                       </yAxis>
+                     <BarChart fx:id="precipitationChart" layoutX="20.0" layoutY="20.0" prefHeight="275.0" prefWidth="350.0">
+                        <xAxis>
+                           <CategoryAxis side="BOTTOM" fx:id="xAxis" />
+                        </xAxis>
+                        <yAxis>
+                           <NumberAxis fx:id="yAxis" side="LEFT" />
+                        </yAxis>
                      </BarChart>
+                  </children>
+               </AnchorPane>
+               <AnchorPane minHeight="100.0" minWidth="139.0" prefHeight="114.0" prefWidth="449.0" style="-fx-background-color: #C0C0C0;" GridPane.rowIndex="1" styleClass="border">
+                  <children>
+                     <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="85.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@../../../images/logo.png" />
+                        </image>
+                     </ImageView>
                   </children>
                </AnchorPane>
             </GridPane>
