--- a/src/main/resources/com/example/watertall/homepage.fxml
+++ b/src/main/resources/com/example/watertall/homepage.fxml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.watertall.Controller">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.watertall.Controller">
    <children>
       <BorderPane layoutX="68.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -105,7 +114,7 @@
                   <RowConstraints vgrow="ALWAYS" />
                   <RowConstraints vgrow="ALWAYS" />
                </rowConstraints>
-               <AnchorPane minHeight="100.0" minWidth="150.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="0" GridPane.rowIndex="0" styleClass="border" >
+               <AnchorPane minHeight="100.0" minWidth="150.0" style="-fx-background-color: #C0C0C0;" styleClass="border" GridPane.columnIndex="0" GridPane.rowIndex="0">
                   <children>
                      <VBox alignment="CENTER" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                         <Label fx:id="temperatureLabel" style="-fx-font-weight: bold;" text="Loading...">
@@ -121,12 +130,15 @@
                      </VBox>
                   </children>
                </AnchorPane>
-               <AnchorPane minHeight="100.0" minWidth="150.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="1" GridPane.rowIndex="0" styleClass="border">
+               <AnchorPane minHeight="51.0" minWidth="150.0" prefHeight="51.0" prefWidth="452.0" style="-fx-background-color: #C0C0C0;" styleClass="border" GridPane.columnIndex="1" GridPane.rowIndex="0">
                   <children>
-                     <Label fx:id="moistureLabel" alignment="CENTER_RIGHT" style="-fx-font-weight: bold;" />
+                     <Label fx:id="moistureLabel" alignment="CENTER" layoutX="77.0" layoutY="106.0" prefHeight="90.0" prefWidth="298.0" style="-fx-font-weight: bold;" text="Loading...">
+                        <font>
+                           <Font size="24.0" />
+                        </font></Label>
                   </children>
                </AnchorPane>
-               <AnchorPane minHeight="100.0" minWidth="139.0" prefHeight="114.0" prefWidth="449.0" style="-fx-background-color: #C0C0C0;" GridPane.columnIndex="1" GridPane.rowIndex="1" styleClass="border">
+               <AnchorPane minHeight="100.0" minWidth="139.0" prefHeight="114.0" prefWidth="449.0" style="-fx-background-color: #C0C0C0;" styleClass="border" GridPane.columnIndex="1" GridPane.rowIndex="1">
                   <children>
                      <Label fx:id="temperatureLabel11" alignment="CENTER" />
                      <BarChart fx:id="precipitationChart" layoutX="20.0" layoutY="20.0" prefHeight="275.0" prefWidth="350.0">
@@ -139,7 +151,7 @@
                      </BarChart>
                   </children>
                </AnchorPane>
-               <AnchorPane minHeight="100.0" minWidth="139.0" prefHeight="114.0" prefWidth="449.0" style="-fx-background-color: #C0C0C0;" GridPane.rowIndex="1" styleClass="border">
+               <AnchorPane minHeight="100.0" minWidth="139.0" prefHeight="114.0" prefWidth="449.0" style="-fx-background-color: #C0C0C0;" styleClass="border" GridPane.rowIndex="1">
                   <children>
                      <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="85.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
                         <image>
